@@ -2,6 +2,6 @@ package com.mapfinal;
 
 public class MapfinalConsts {
 
-	public static final String version = "0.3";
+	public static final String version = "0.3.1";
 	public static final String author = "yangyong";
 }
