@@ -80,7 +80,7 @@ public abstract class AbstractLayer implements Layer, EventObject {
 	public boolean handleEvent(Event event) {
 		// TODO Auto-generated method stub
 		if(renderer!=null && Renderer.EVENT_CANCELDRAW.equals(event.getAction())) {
-			renderer.cancelDraw(event);
+			renderer.handleEvent(event);
 		}
 		return false;
 	}
